css/sv-post.css
/**
 * 16.3 Post
 */
:not(body).site-content {
    padding-top: 30px;
}

body.post-template-default::before,
body.post-template-default::after {
    content: unset;
}

body.post-template-default div#page {
    margin-top: 0;
    margin-bottom: 0;
}

body.post-template-default div#page header {
    position: relative;
    width: 100%;
}

.sourcevortex-intern header.post-intern {
    padding: 0 7%;
    margin: 0;
}

.sourcevortex-intern .post-intern-thumbnail-container {
    position: relative;
    border-bottom: 4px solid #e6c619;
    margin-bottom: 30px;
}

.sourcevortex-intern .post-intern-thumbnail-container .post-thumbnail {
    display: flex;
    justify-content: center;
    align-items: center;
    background: black;
}

.sourcevortex-intern .post-intern-thumbnail-container .category-box {
    position: absolute;
    left: 5px;
    bottom: 0;
    font-family: 'Montserrat';
    font-size: 0.8em;
    display: inline-block;
    background-color: #e6c619;
    padding: 3px 10px;
    color: black;
    text-transform: uppercase;
}
 
.sourcevortex-intern .post-intern.entry-header h1 {
    font-size: 1.4em;
    color: white;
    margin-bottom: 0;
}

.sourcevortex-intern header.post-intern::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    border-bottom: 20px solid transparent;
    border-left: 20px solid white;
    width: 0;
}

.sourcevortex-intern header.post-intern {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: black;
    padding: 15px 30px;
}
 
.sourcevortex-intern .post-sourcevortex .tags-section {
    margin-bottom: 60px;
}
 
.sourcevortex-intern .post-sourcevortex .tags-section a {
    background-color: black;
    padding: 3px 10px;
    border-radius: 45px;
    font-weight: bold;
    white-space: unset;
    line-height: 35px;
}
 
.sourcevortex-intern .post-sourcevortex .tags-section a:hover {
    color: white;
}
 
.sourcevortex-intern .post-sourcevortex .author-info {
    border: 0;
}
 
.sourcevortex-intern .post-sourcevortex .author-avatar .avatar {
    margin-top: 10px;
    width: 96px;
    height: 96px;
} 
 
.sourcevortex-intern footer.entry-footer.post-sourcevortex {
    margin-top: 120px !important;
    float: none !important;
}
 
.go-to-top-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    right: 10px;
    bottom: 50px;
    height: 30px;
    width: 30px;
    background-color: black;
    border-radius: 3px;
    cursor: pointer;
    text-align: center;
    font-size: 23px;
}
 
.go-to-top-btn:hover,
.srcvtx-toggle-theme-post:hover {
    box-shadow: 0px 1px 2px 1px #111;
    transition: box-shadow 0.3s;
}
 
.go-to-top-btn::after {
    font-family: 'Genericons';
    content:"\f432";
    color: white;
}

.srcvtx-toggle-theme-post {
    position: fixed;
    right: 10px;
    bottom: 10px;
    height: 30px;
    width: 30px;
    background-color: black;
    color: white;
    border-radius: 3px;
    cursor: pointer;
    text-align: center;
}

.srcvtx-toggle-theme-post > div {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

html.srcvtx_theme_dark .srcvtx-toggle-theme-post .srcvtx-toggle-light {
    display: flex;
}

.srcvtx-toggle-theme-post svg {
    width: 15px;
    height: 15px;
}
 
 /**
  * >= 710px
  */
@media screen and (min-width: 44.375em) {
    .go-to-top-btn {
        right: 40px;
        bottom: 60px;
    }

    .srcvtx-toggle-theme-post {
        right: 40px;
        bottom: 20px;
    }
 
    .sourcevortex-intern div.post-sourcevortex {
        margin-right: 7.6923%;
    }
}
 
 /**
  * >= 985px
  */
@media screen and (min-width: 61.5625em) {
    .sourcevortex-intern header.post-intern::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        border-bottom: 20px solid transparent;
        border-left: 20px solid white;
        width: 0;
    }

    .sourcevortex-intern .post-intern.entry-header h1 {
        margin-bottom: 0;
        color: white;
        font-weight: bold;
        font-size: 22px;
        text-transform: uppercase;
    }

    .sourcevortex-intern .post-intern-thumbnail-container {
        margin-bottom: 75px;
    }
     
    .sourcevortex-intern .entry-content.post-sourcevortex > p {
        font-size: 20px;
        line-height: 38px;
        font-family: "Asap";
    }

    .sourcevortex-intern .post-sourcevortex .tags-section a {
        white-space: nowrap;
    }
}

